--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                 <div class="tab-pane" id="tab-4">
                     <div class="row">
                         <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
-                            <h3>Business/h3>
+                            <h3>Business</h3>
                             <p>
                                 Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
                                 reprehenderit in voluptate
